update ci add mannually trigger

--- a/.github/workflows/publish_server.yml
+++ b/.github/workflows/publish_server.yml
@@ -11,6 +11,8 @@ on:
       .git
     branches: [ gh-pages ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   deploy:
