--- a/site_config.json
+++ b/site_config.json
@@ -47,6 +47,12 @@
             "config": {
                 "search_hint": "Search"
             }
+        },
+        "teedoc-plugin-baidu-tongji":{
+            "from": "pypi",
+            "config": {
+                "code": "90c693aa2475224142e727c14a50bb49"
+            }
         }
     }
 }
