--- a/pages/index/zh/config.json
+++ b/pages/index/zh/config.json
@@ -85,6 +85,16 @@
                         "target": "_blank"
                     }
                 ]
+            },
+            {
+                "label": "网站统计",
+                "items": [
+                    {
+                        "label": "百度统计",
+                        "url": "https://tongji.baidu.com/web/welcome/ico?s=90c693aa2475224142e727c14a50bb49",
+                        "target": "_blank"
+                    }
+                ]
             }
         ],
         "bottom": [
