--- a/docs/maixpy3/en/config.json
+++ b/docs/maixpy3/en/config.json
@@ -8,17 +8,17 @@
         "home_url": "/en",
         "items": [
             {
-                "url": "/get_started/en",
-                "label": "Install",
+                "url": "/maixpy/en/",
+                "label": "MaixPy",
                 "position": "left"
             },
             {
-                "url": "/develop/en",
-                "label": "Develop",
+                "url": "/maixpy3/en/",
+                "label": "MaixPy3",
                 "position": "left"
             },
             {
-                "url": "https://github.com/neutree/teedoc",
+                "url": "https://github.com/sipeed",
                 "label": "github",
                 "target": "_blank",
                 "position": "right"
@@ -28,11 +28,11 @@
                 "position": "right",
                 "items": [
                     {
-                        "url": "/get_started/zh",
+                        "url": "/maixpy3/zh/",
                         "label": "中文"
                     },
                     {
-                        "url": "/get_started/en",
+                        "url": "/maixpy3/en/",
                         "label": "English"
                     }
                 ]
@@ -82,6 +82,16 @@
                     {
                         "label": "Doc Source Files",
                         "url": "https://github.com/sipeed/MaixPy_DOC",
+                        "target": "_blank"
+                    }
+                ]
+            },
+            {
+                "label": "Analytics",
+                "items": [
+                    {
+                        "label": "Baidu Analytics",
+                        "url": "https://tongji.baidu.com/web/welcome/ico?s=90c693aa2475224142e727c14a50bb49",
                         "target": "_blank"
                     }
                 ]
