--- a/pages/index/en/config.json
+++ b/pages/index/en/config.json
@@ -1,24 +1,24 @@
 {
     "navbar": {
-        "title": "teedoc",
+        "title": "MaixPy",
         "logo": {
-            "alt": "teedoc logo",
+            "alt": "MaixPy logo",
             "src": "/static/image/logo.png"
         },
-        "home_url": "/en",
+        "home_url": "/en/",
         "items": [
             {
-                "url": "/get_started/en",
-                "label": "Install",
+                "url": "/maixpy/en/",
+                "label": "MaixPy",
                 "position": "left"
             },
             {
-                "url": "/develop/en",
-                "label": "Develop",
+                "url": "/maixpy3/en/",
+                "label": "MaixPy3",
                 "position": "left"
             },
             {
-                "url": "https://github.com/neutree/teedoc",
+                "url": "https://github.com/sipeed",
                 "label": "github",
                 "target": "_blank",
                 "position": "right"
@@ -32,7 +32,7 @@
                         "label": "中文"
                     },
                     {
-                        "url": "/en",
+                        "url": "/en/",
                         "label": "English"
                     }
                 ]
@@ -82,6 +82,16 @@
                     {
                         "label": "Doc Source Files",
                         "url": "https://github.com/sipeed/MaixPy_DOC",
+                        "target": "_blank"
+                    }
+                ]
+            },
+            {
+                "label": "Analytics",
+                "items": [
+                    {
+                        "label": "Baidu Analytics",
+                        "url": "https://tongji.baidu.com/web/welcome/ico?s=90c693aa2475224142e727c14a50bb49",
                         "target": "_blank"
                     }
                 ]
