--- a/docs/maixpy3/en/config.json
+++ b/docs/maixpy3/en/config.json
@@ -93,6 +93,10 @@
                         "label": "Baidu Analytics",
                         "url": "https://tongji.baidu.com/web/welcome/ico?s=90c693aa2475224142e727c14a50bb49",
                         "target": "_blank"
+                    },
+                    {
+                        "label": "Sitemap",
+                        "url": "/sitemap.xml"
                     }
                 ]
             }
