--- a/docs/maixpy/en/config.json
+++ b/docs/maixpy/en/config.json
@@ -1,116 +1,21 @@
 {
+    "import": "config_en",
     "navbar": {
-        "title": "MaixPy",
-        "logo": {
-            "alt": "MaixPy logo",
-            "src": "/static/image/logo.png"
-        },
-        "home_url": "/en/",
         "items": [
             {
-                "url": "/maixpy/en/",
-                "label": "MaixPy",
-                "position": "left"
-            },
-            {
-                "url": "/maixpy3/en/",
-                "label": "MaixPy3",
-                "position": "left"
-            },
-            {
-                "url": "https://github.com/sipeed",
-                "label": "github",
-                "target": "_blank",
-                "position": "right"
-            },
-            {
-                "label": "Language: ",
-                "position": "right",
+                "id": "language",
                 "items": [
                     {
-                        "url": "/maixpy/zh",
+                        "id": "zh",
+                        "url": "/maixpy3/zh/",
                         "label": "中文"
                     },
                     {
-                        "url": "/maixpy/en",
+                        "id": "en",
+                        "url": "/maixpy3/en/",
                         "label": "English"
                     }
                 ]
-            }
-        ]
-    },
-    "footer":{
-        "top":[
-            {
-                "label": "Links",
-                "items": [
-                    {
-                        "label": "Sipeed",
-                        "url": "https://www.sipeed.com",
-                        "target": "_blank"
-                    },
-                    {
-                        "label": "BBS",
-                        "url": "https://bbs.sipeed.com/",
-                        "target": "_blank"
-                    },
-                    {
-                        "label": "Sipeed Shop(Taobao)",
-                        "url": "https://sipeed.taobao.com/",
-                        "target": "_blank"
-                    },
-                    {
-                        "label": "Build with teedoc",
-                        "url": "https://github.com/neutree/teedoc",
-                        "target": "_blank"
-                    }
-                ]
-            },
-            {
-                "label": "Source Code",
-                "items": [
-                    {
-                        "label": "MaixPy3",
-                        "url": "https://github.com/sipeed/MaixPy3",
-                        "target": "_blank"
-                    },
-                    {
-                        "label": "MaixPy",
-                        "url": "https://github.com/sipeed/MaixPy",
-                        "target": "_blank"
-                    },
-                    {
-                        "label": "Doc Source Files",
-                        "url": "https://github.com/sipeed/MaixPy_DOC",
-                        "target": "_blank"
-                    }
-                ]
-            },
-            {
-                "label": "Analytics",
-                "items": [
-                    {
-                        "label": "Baidu Analytics",
-                        "url": "https://tongji.baidu.com/web/welcome/ico?s=90c693aa2475224142e727c14a50bb49",
-                        "target": "_blank"
-                    },
-                    {
-                        "label": "Sitemap",
-                        "url": "/sitemap.xml"
-                    }
-                ]
-            }
-        ],
-        "bottom": [
-            {
-                "label": "Copyright © 2018-2021 Sipeed Ltd",
-                "url": "https://www.sipeed.com",
-                "target": "_blank"
-            },
-            {
-                "label": "粤ICP备19015433号",
-                "url": "https://beian.miit.gov.cn",
-                "target": "_blank"
             }
         ]
     }
